feat: Added project name interpolation

--- a/src/baker_cli/templates/ci/github-actions.yml.j2
+++ b/src/baker_cli/templates/ci/github-actions.yml.j2
@@ -33,7 +33,7 @@ jobs:
           python-version: '3.x'
       - name: Install baker-cli
         run: pip install baker-cli
-      - name: Build all targets
+      - name: Bake targets
         run: |
           set -e
 {%- for t in targets %}
